@@ -1,3 +1,4 @@
+- fixed a bug in popstate.c that was calling realloc(NULL,0)
 - added yahoo.co.nz (thanks Picov)
 - committed Viruzzo version of supereva, thanks Lance for reporting this version was working
 - added missing cleanup for expired cookies (thanks RISKO Gergely)
